@@ -69,9 +69,9 @@ struct host_q {
     int				hq_no_punt;
     int				hq_launches;
     int				hq_delay;
+    int				hq_leaky;
     struct envelope		*hq_env_head;
     struct line_file		*hq_err_text;
-    struct timeval		hq_last_leaky;
     struct timeval		hq_last_launch;
     struct timeval		hq_next_launch;
     struct timeval		hq_wait_last;
@@ -91,4 +91,4 @@ void	hq_deliver_pop( struct host_q * );
 void	queue_log_metrics( struct host_q * );
 
 int	q_read_dir( struct simta_dirp * );
-void	hq_deliver_push( struct host_q *, struct timeval *, int );
+void	hq_deliver_push( struct host_q *, struct timeval *, struct timeval * );
